--- a/.dbeaver/credentials-config.json
+++ b/.dbeaver/credentials-config.json
@@ -1,1 +1,2 @@
-þ{óT•W¥Ò%y˜ßMÈÕëñ\}:,vò´$äç½gÎA[‰é=­¿EŸvÛU1Þâ~?	Oz6êLÌÀ©7hmÈ†Î´#ù‹'ñ<"ÔÃY"ËëBD4Xíƒtê$É3rZ&ê:-nI+@­¦f‘kÓöíâÿ‡ð4ç=—íÞÌ§*Q¶o˜5²ÙÞçk’ÿË!!Ç®‹¼Z%2’¦ÎÀWUM>ØWÐè·ÈÁý80hºÀH¬tö€¼é[ÅæVL^Ùtu@Ðédooh¥JÃ$í&Ö‚­°íœÑÐù–Ì£¸Fw@Ð«¬Ÿ
+âTždÛ¶+BÁþŒäŠ¦:„Hd‘O­«!¡ˆ£bPïd“åp†‰TþRW6”aNGègv@4´É¡„_ÿ,Í²xÕQ–j¶¯ŠUÀž[æO4årå'oXyŒ¦œAœöRn¯Ò °¢b¿#ün¢i•þg£3åýÈÂù®âÊ[N‚L/’¿§ÞUÛ|ËüG´+w€q6¤‡)l–ó±þµ½âÏ[:¹/)
+ÇhR<„µÍìcFç¥cÚ"LAT1ýèØN˜­i^3¨ˆˆLÛSÀQ½‘­~õ…ÞžÚÂåÂ{ý]ÔÊ°d2O
