--- a/.classpath
+++ b/.classpath
@@ -12,9 +12,10 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/lrzrl/git/company_project/WebContent/WEB-INF/lib/cos-05Nov2002.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lrzrl/git/company_project/WebContent/WEB-INF/lib/gson-2.8.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lrzrl/git/company_project/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lrzrl/git/company_project/WebContent/WEB-INF/lib/ojdbc8-19.7.0.0.jar"/>
+	<classpathentry kind="lib" path="F:/workspace/workspace_exam_web/company_project/WebContent/WEB-INF/lib/cos-05Nov2002.jar"/>
+	<classpathentry kind="lib" path="F:/workspace/workspace_exam_web/company_project/WebContent/WEB-INF/lib/gson-2.8.6.jar"/>
+	<classpathentry kind="lib" path="F:/workspace/workspace_exam_web/company_project/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="F:/workspace/workspace_exam_web/company_project/WebContent/WEB-INF/lib/ojdbc8-19.7.0.0.jar"/>
+	<classpathentry kind="lib" path="F:/workspace/workspace_exam_web/company_project/WebContent/WEB-INF/lib/orai18n.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
